--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.41.2",
     "concurrently": "^8.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
